# initRepo

./: .environment  .environment_windows  .gitattributes  .gitignore  .windows_environment.cmd  CMakeLists.txt  README.md  build.sh  format_hook  init.sh  installCompiler.sh
.github/workflows/: ubuntu_build_test.yml
cmake/: ClangFuzzyTests.cmake  CompilerSetup.cmake  CompilerWarnings.cmake  Includes.cmake  Options.cmake  ProjectSettings.cmake
scripts/: build.cmd  build.sh  checkClangFormat.sh  checkClangTidy.sh  checkDoxygenHeader.sh  checkFileHeaders.sh  checkShellCheck.sh  createDokumentation.sh  ensureToolVersion.sh  init.sh  installCompiler.sh  runFuzzer.sh  showCoverage.sh  update.sh  windowsEnvironmentHelper.sh
src/executables/: CMakeLists.txt
src/executables/src/: StandaloneFuzzTargetMain.cpp  fuzzer_example.cpp  hello_world.cpp
src/fuzzer_lib/: CMakeLists.txt
src/fuzzer_lib/include/fuzzer_lib/: example_file.hpp
src/fuzzer_lib/src/fuzzer_lib/: example_file.cpp
src/tests/: CMakeLists.txt
src/tests/src/: test_hello_world.cpp
templates/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Doxyfile  build.sh  format_hook  ubuntu_build_test.yml  windows_build_test.yml
